--- a/coubee-be-order/.kube/coubee-be-order-deploy.yml
+++ b/coubee-be-order/.kube/coubee-be-order-deploy.yml
@@ -19,6 +19,8 @@ spec:
           env:
             - name: SPRING_PROFILES_ACTIVE
               value: stg
+            - name: SPRING_CONFIG_LOCATION
+              value: file:/etc/config/application-stg.yml
             # Kubernetes API 비활성화 추가
             - name: SPRING_CLOUD_KUBERNETES_ENABLED
               value: "false"
