--- a/coubee-be-order/.kube/coubee-be-order-deploy.yml
+++ b/coubee-be-order/.kube/coubee-be-order-deploy.yml
@@ -20,7 +20,7 @@ spec:
             - name: SPRING_PROFILES_ACTIVE
               value: stg
             - name: SPRING_CONFIG_LOCATION
-              value: file:/etc/config/application-stg.yml
+              value: file:/etc/config/application-stg.yml,file:/etc/secret/application-secret.yml
             # Kubernetes API 비활성화 추가
             - name: SPRING_CLOUD_KUBERNETES_ENABLED
               value: "false"
