--- a/coubee-be-order/.kube-eks/coubee-be-order-config.yml
+++ b/coubee-be-order/.kube-eks/coubee-be-order-config.yml
@@ -8,10 +8,10 @@ data:
       port: 8080
     
     spring:
-      # 1. Flyway 에러 해결: 현재 DB 상태가 V4임을 명시
-      flyway:
-        baseline-on-migrate: true
-        baseline-version: 4
+      # # 1. Flyway 에러 해결: 현재 DB 상태가 V4임을 명시
+      # flyway:
+      #   baseline-on-migrate: true
+      #   baseline-version: 4
       
       datasource:
         # 2. 스키마 경로 문제 해결: 모든 DB 연결이 coubee_order 스키마를 보도록 강제
