Fix: Resolve Flyway baseline error and set default schema path #8

--- a/coubee-be-order/.kube/coubee-be-order-config.yml
+++ b/coubee-be-order/.kube/coubee-be-order-config.yml
@@ -9,10 +9,11 @@ data:
     
     spring:
       # # 1. Flyway 에러 해결: 현재 DB 상태가 V4임을 명시
-      # flyway:
+      flyway:
+        repair-on-migrate: true
       #   baseline-on-migrate: true
       #   baseline-version: 4
-      
+
       datasource:
         # 2. 스키마 경로 문제 해결: 모든 DB 연결이 coubee_order 스키마를 보도록 강제
         url: jdbc:postgresql://52.78.117.85:5432/coubee_order?currentSchema=coubee_order
