Fix: Update liveness and readiness probe paths to use actual controller endpoints

--- a/coubee-be-order/.kube/coubee-be-order-deploy.yml
+++ b/coubee-be-order/.kube/coubee-be-order-deploy.yml
@@ -37,7 +37,8 @@ spec:
               name: be-order-secret-volume
           livenessProbe:
             httpGet:
-              path: /api/health/liveness
+              # [수정] Actuator 상태 그룹 경로 대신 실제 컨트롤러 경로로 수정합니다.
+              path: /api/health/live
               port: 8080
             initialDelaySeconds: 90
             periodSeconds: 30
@@ -45,7 +46,8 @@ spec:
             failureThreshold: 5
           readinessProbe:
             httpGet:
-              path: /api/health/readiness
+              # [수정] Actuator 상태 그룹 경로 대신 실제 컨트롤러 경로로 수정합니다.
+              path: /api/health/ready
               port: 8080
             initialDelaySeconds: 60
             periodSeconds: 15
