eat: Implement compensating transaction in preparePayment
Introduces a try-catch block to handle failures after stock decrement.
If any local DB operation fails post-decrement, a compensating call
to \`increaseStock\` is made to prevent data inconsistency between
the order and product services.

--- a/coubee-be-order/.kube/coubee-be-order-config.yml
+++ b/coubee-be-order/.kube/coubee-be-order-config.yml
@@ -19,8 +19,15 @@ data:
         url: jdbc:postgresql://52.78.117.85:5432/coubee_order?currentSchema=coubee_order
         driver-class-name: org.postgresql.Driver
         hikari:
+          # Production-ready connection pool settings
+          maximum-pool-size: 50
+          minimum-idle: 10
+          idle-timeout: 300000
+          connection-timeout: 20000
+          max-lifetime: 1800000
           connection-test-query: SELECT 1
           validation-timeout: 5000
+          leak-detection-threshold: 60000
       
       jpa:
         database-platform: org.hibernate.dialect.PostgreSQLDialect
