--- a/coubee-be-order/src/main/resources/application.yml
+++ b/coubee-be-order/src/main/resources/application.yml
@@ -9,6 +9,25 @@ logging:
     com.coubee.coubeebeorder.remote.store: DEBUG
     feign: DEBUG
 
+# Resilience4j Circuit Breaker Configuration
+resilience4j:
+  circuitbreaker:
+    instances:
+      productStock:
+        failure-rate-threshold: 50
+        sliding-window-size: 10
+        wait-duration-in-open-state: 10s
+        minimum-number-of-calls: 5
+        permitted-number-of-calls-in-half-open-state: 3
+        automatic-transition-from-open-to-half-open-enabled: true
+      downstreamServices:
+        failure-rate-threshold: 50
+        sliding-window-size: 10
+        wait-duration-in-open-state: 10s
+        minimum-number-of-calls: 5
+        permitted-number-of-calls-in-half-open-state: 3
+        automatic-transition-from-open-to-half-open-enabled: true
+
 
 
   kafka:
