--- a/coubee-be-order/build.gradle
+++ b/coubee-be-order/build.gradle
@@ -50,8 +50,8 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-loadbalancer'
     
     // Circuit Breaker
-    // implementation 'io.github.resilience4j:resilience4j-spring-boot3'
-    // implementation 'org.springframework.cloud:spring-cloud-starter-circuitbreaker-resilience4j'
+    implementation 'io.github.resilience4j:resilience4j-spring-boot3'
+    implementation 'org.springframework.cloud:spring-cloud-starter-circuitbreaker-resilience4j'
     
     // PostgreSQL
     runtimeOnly 'org.postgresql:postgresql'
