--- a/coubee-be-order/.kube-eks/coubee-be-order-deploy.yml
+++ b/coubee-be-order/.kube-eks/coubee-be-order-deploy.yml
@@ -31,13 +31,7 @@ spec:
             - name: SPRING_CONFIG_LOCATION
               value: file:/etc/config/application-stg.yml,file:/etc/secret/application-secret.yml
             # ======================================================================
-
-            - name: SPRING_CLOUD_KUBERNETES_ENABLED
-              value: "false"
-            - name: SPRING_CLOUD_KUBERNETES_DISCOVERY_ENABLED
-              value: "false"
-            - name: SPRING_CLOUD_KUBERNETES_CONFIG_ENABLED
-              value: "false"
+            # The Kubernetes-disabling environment variables have been removed.
           ports:
             - containerPort: 8080
           volumeMounts:
